Ported most things

--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -5,10 +5,11 @@
         About me
       </u>
       <p>
-        Hello there! My name is Lukas Weber and I am {{ age }} years old.
+        Hello there! My name is Lukas Weber and I am \{\{ TODO age TODO \}\} years old.
       </p>
       <p>
-        Currently, I live in Germany, but I am studying <i>Software Engineering</i> in the Netherlands. I am interested in a lot
+        Currently, I live in Germany, but I am studying <i>Software Engineering</i> in the Netherlands. I am interested
+        in a lot
         of topics (mainly IT related).
         I am constantly learning new skills and about new topics I find interesting.
       </p>
@@ -20,7 +21,7 @@
         <a href="https://keybase.io/sakul6499">KeyBase</a>.
       </p>
     </div>
-    {% include "components/timeline" %}       
+    {% include "components/timeline.html" %}
   </article>
-  {% include "components/skills" %}       
+  {% include "components/skills.html" %}
 </section>
