--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,4 @@
-{% extends "components/base" %}
+{% extends "components/base.html" %}
 
 {% block content %}
 <div id="contact">
@@ -17,7 +17,7 @@
           <div class="media">
             <div class="media-left">
               <figure class="image is-48x48">
-                {% include "components/svg/mail" %}
+                {% include "components/svg/mail.html" %}
               </figure>
             </div>
             <div class="media-content">
@@ -31,7 +31,8 @@
           </div>
           <div class="content">
             I prefer to use email <b>only</b> for professional and content related contact requests.
-            Contact me at <a href="mailto:me@sakul6499.de" class="has-text-grey-dark">me@sakul6499.de</a> or <a href="mailto:me@webmaster.sakul6499.de" class="has-text-grey-dark">webmaster.sakul6499.de</a>.
+            Contact me at <a href="mailto:me@sakul6499.de" class="has-text-grey-dark">me@sakul6499.de</a> or <a
+              href="mailto:me@webmaster.sakul6499.de" class="has-text-grey-dark">webmaster.sakul6499.de</a>.
             Encrypted messages are preferred!
             Check out my <a href="https://keybase.io/sakul6499/pgp_keys.asc">public key</a>.
           </div>
@@ -42,7 +43,7 @@
           <div class="media">
             <div class="media-left">
               <figure class="image is-48x48">
-                {% include "components/svg/twitter" %}
+                {% include "components/svg/twitter.html" %}
               </figure>
             </div>
             <div class="media-content">
@@ -55,7 +56,8 @@
             </div>
           </div>
           <div class="content">
-            Reach out to me publicly by <i>@dding</i> me at <a href="https://twitter.com/sakul6499" class="has-text-grey-dark">@Sakul6499</a> or contact me privately via PMs!
+            Reach out to me publicly by <i>@dding</i> me at <a href="https://twitter.com/sakul6499"
+              class="has-text-grey-dark">@Sakul6499</a> or contact me privately via PMs!
           </div>
         </div>
       </div>
@@ -66,7 +68,7 @@
           <div class="media">
             <div class="media-left">
               <figure class="image is-48x48">
-                {% include "components/svg/keybase" %}
+                {% include "components/svg/keybase.html" %}
               </figure>
             </div>
             <div class="media-content">
@@ -81,7 +83,8 @@
           <div class="content">
             Keybase is the best of having a secure and private chat with me!
             Additionally, my other proven profiles are listed there.
-            Add me at <a href="https://keybase.io/sakul6499" class="has-text-grey-dark">@Sakul6499</a> and start talking!
+            Add me at <a href="https://keybase.io/sakul6499" class="has-text-grey-dark">@Sakul6499</a> and start
+            talking!
           </div>
         </div>
       </div>
@@ -90,7 +93,7 @@
           <div class="media">
             <div class="media-left">
               <figure class="image is-48x48">
-                {% include "components/svg/telegram" %}
+                {% include "components/svg/telegram.html" %}
               </figure>
             </div>
             <div class="media-content">
@@ -115,7 +118,7 @@
           <div class="media">
             <div class="media-left">
               <figure class="image is-48x48">
-                {% include "components/svg/linkedin" %}
+                {% include "components/svg/linkedin.html" %}
               </figure>
             </div>
             <div class="media-content">
