--- a/templates/legal.html
+++ b/templates/legal.html
@@ -1,4 +1,4 @@
-{% extends "components/base" %}
+{% extends "components/base.html" %}
 
 {% block content %}
 <div>
@@ -21,52 +21,58 @@
             Said person is <i>Lukas Weber</i>.
           </p>
           <p>
-            According to <span class="is-family-code">§5 German Telemedia Act (TMG)</span>, the <b>responsible person</b> has to offer at least one way of getting into contact <underline>quickly</underline> with the <b>owner</b>.
+            According to <span class="is-family-code">§5 German Telemedia Act (TMG)</span>, the <b>responsible
+              person</b> has to offer at least one way of getting into contact <underline>quickly</underline> with the
+            <b>owner</b>.
           </p>
           <p>
             This, however, is excluded for <b>private</b> / <b>personal</b> projects.
-            My website, and thus the blog and content on this website, is purely <b>personal</b>, but not <b>private</b>.
+            My website, and thus the blog and content on this website, is purely <b>personal</b>, but not
+            <b>private</b>.
           </p>
           <p>
             Nevertheless, communication via letters is the traditional way, but can be extremly slow.
             I am also not feeling confident with putting out my <b>private address</b> here.
           </p>
           <p>
-            Thus, if you feel the need to contact me:<br/>
-            <b>Please</b>, use my <a href="mailto:webmaster@sakul6499.de">email</a>.<br/>
+            Thus, if you feel the need to contact me:<br />
+            <b>Please</b>, use my <a href="mailto:webmaster@sakul6499.de">email</a>.<br />
             I can react the quickest this way.
           </p>
           <p>
-            If you insist on sending me a letter:<br/>
-            Either, scan the letter and attach it to the <a href="mailto:webmaster@sakul6499.de">email</a>, or, request my address via <a href="mailto:webmaster@sakul6499.de">email</a>.
+            If you insist on sending me a letter:<br />
+            Either, scan the letter and attach it to the <a href="mailto:webmaster@sakul6499.de">email</a>, or, request
+            my address via <a href="mailto:webmaster@sakul6499.de">email</a>.
             However, such a request must follow a <b>valid</b> and <b>strong</b> reason to be accepted.
-            <b>Anything that can be done via <a href="mailto:webmaster@sakul6499.de">email</a> and <underline>does not</underline> require my address <underline>will be denied.</underline></b>
+            <b>Anything that can be done via <a href="mailto:webmaster@sakul6499.de">email</a> and <underline>does not
+              </underline> require my address <underline>will be denied.</underline></b>
           </p>
           <p>
-            Alternatively to using <a href="mailto:webmaster@sakul6499.">email</a>, use <b>any</b> other method of getting in contact with me as described on <a href="/contact">my contact page</a>.
+            Alternatively to using <a href="mailto:webmaster@sakul6499.">email</a>, use <b>any</b> other method of
+            getting in contact with me as described on <a href="/contact">my contact page</a>.
           </p>
         </div>
         <div class="column is-half">
           <div class="is-size-5 is-family-code">Contact information</div>
           <span>
-            <b>E-Mail</b>: <a href="mailto:me@sakul6499.de">me@sakul6499.de</a><br/>
-            or<br/>
+            <b>E-Mail</b>: <a href="mailto:me@sakul6499.de">me@sakul6499.de</a><br />
+            or<br />
             <b>E-Mail</b>: <a href="mailto:webmaster@sakul6499.de">webmaster@sakul6499.de</a>
           </span>
-          <br/>
-          <br/>
+          <br />
+          <br />
           <span>
-            <b>Telephone</b>: Unpon request <underline>only</underline>.<br/>
+            <b>Telephone</b>: Unpon request <underline>only</underline>.<br />
             Please see left side.
           </span>
-          <br/>
-          <br/>
+          <br />
+          <br />
           <span>
-            <b>Address</b>: Unpon request <underline>only</underline>.<br/>
+            <b>Address</b>: Unpon request <underline>only</underline>.<br />
             Please see left side.
           </span>
-          <br/>
-          <br/>
+          <br />
+          <br />
           <span>
             And <b>any</b> other methods as described on <a href="/contact">my contact page</a>.
           </span>
@@ -92,31 +98,33 @@
               However, <i>content</i> can be any other form of information as well in a given context.
             </p>
             <p>
-              Where not otherwise stated applies:<br/>
-              I <b>do</b> encourage the share and contribution of and to my content.<br/>
-              I <b>do not</b> encourage redistribution of my content in any form, shameless 'copy&paste' and misclaims regarding my content.
+              Where not otherwise stated applies:<br />
+              I <b>do</b> encourage the share and contribution of and to my content.<br />
+              I <b>do not</b> encourage redistribution of my content in any form, shameless 'copy&paste' and misclaims
+              regarding my content.
             </p>
             <p>
               However, generally applies:<br />
-              I am doing this not only for myself, but to share information, strategies, code, projects and ideas with others.
-              As long as our goals are the same, there will be no issues at all. 
+              I am doing this not only for myself, but to share information, strategies, code, projects and ideas with
+              others.
+              As long as our goals are the same, there will be no issues at all.
               You are allowed to use the projects and code from my website, as long as you:
             </p>
             <ul>
               <li>
-                Credit me, my work and a way of contacting me (e.g. use the link to the project or post you are using/referencing)
+                Credit me, my work and a way of contacting me (e.g. use the link to the project or post you are
+                using/referencing)
               </li>
               <li>
-                <b>Not a requirement:</b> Inform me (see <a href="/contact">my contact page</a>) that you are using or referencing my content and what you are using it for
+                <b>Not a requirement:</b> Inform me (see <a href="/contact">my contact page</a>) that you are using or
+                referencing my content and what you are using it for
               </li>
               <li>
                 Accept and adhere to the license of that post and/or project
               </li>
             </ul>
-            <b
-              >Single posts and projects may exclude and differ from this if
-              stated differently on the project or post page.</b
-            >
+            <b>Single posts and projects may exclude and differ from this if
+              stated differently on the project or post page.</b>
           </div>
         </article>
       </div>
@@ -149,10 +157,7 @@
             <a href="https://www.cloudflare.com/">CloudFlare</a>.
             <a href="https://www.cloudflare.com/">CloudFlare</a> itself uses
             several technologies to shield and optimize, such as their
-            <a
-              href="https://blog.cloudflare.com/we-have-lift-off-rocket-loader-ga-is-mobile/"
-              >Rocket Loader</a
-            >.
+            <a href="https://blog.cloudflare.com/we-have-lift-off-rocket-loader-ga-is-mobile/">Rocket Loader</a>.
             <br />
             Additionally,
             <a href="https://www.cloudflare.com/">CloudFlare</a> is collecting
@@ -163,9 +168,7 @@
             <br />
             For further information, please consider
             <a href="https://www.cloudflare.com/">CloudFlare</a>'s
-            <a href="https://www.cloudflare.com/privacypolicy/"
-              >privacy policy</a
-            >.
+            <a href="https://www.cloudflare.com/privacypolicy/">privacy policy</a>.
           </div>
         </article>
       </div>
@@ -241,10 +244,11 @@
     </div>
     <div class="message-body">
       This page is extended by the <a href="/credits">credits</a> page.
-      <br/>
-      Please also consult the <a href="/credits">credits</a> page for further information about software, libraries and services used to build this website.
-      <br/>
-      <br/>
+      <br />
+      Please also consult the <a href="/credits">credits</a> page for further information about software, libraries and
+      services used to build this website.
+      <br />
+      <br />
       The <a href="/credits">credit</a> page can be found <a href="/credits">here</a>.
     </div>
   </article>
