--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,6 @@
 @charset "utf-8"
-@import "./bulma/bulma.sass"
-@import "./bulma-tooltip/src/sass/index.sass"
+@import "../dependencies/bulma/bulma.sass"
+@import "../dependencies/bulma-tooltip/src/sass/index.sass"
 
 $page-margin: 32px
 $footer-spacing: 4%
