--- a/templates/components/scroll-down.html
+++ b/templates/components/scroll-down.html
@@ -1,4 +1,4 @@
 <div class="container" id="down-arrow">
-    {% include "components/svg/down_arrow" %}  
+    {% include "components/svg/down_arrow.html" %}
     <p>Scroll down!</p>
 </div>
