--- a/templates/credits.html
+++ b/templates/credits.html
@@ -1,4 +1,4 @@
-{% extends "components/base" %}
+{% extends "components/base.html" %}
 
 {% block content %}
 <div id="credit">
@@ -16,7 +16,9 @@
         <article class="tile is-child notification is-dark">
           <h1 class="title">Open-Source</h1>
           <div class="content">
-            The entire source code of my website is Open-Source, licensed under <a href="https://choosealicense.com/licenses/mit/">MIT</a> and can be found on my <a href="https://gitlab.com/sakul6499_de/sakul6499_de.gitlab.io">repository</a>.
+            The entire source code of my website is Open-Source, licensed under <a
+              href="https://choosealicense.com/licenses/mit/">MIT</a> and can be found on my <a
+              href="https://gitlab.com/sakul6499_de/sakul6499_de.gitlab.io">repository</a>.
           </div>
         </article>
       </div>
@@ -30,10 +32,12 @@
         <div class="content">
           <p>
             <a href="https://rocket.rs/">Rocket.rs</a> is used for the <i>backend</i>.
-            All required files for the <i>frontend</i> are served by <a href="https://rocket.rs/">Rocket.rs</a> and required data is fetched from the <i>database</i>.
+            All required files for the <i>frontend</i> are served by <a href="https://rocket.rs/">Rocket.rs</a> and
+            required data is fetched from the <i>database</i>.
           </p>
           <p>
-            <a href="https://rocket.rs/">Rocket.rs</a> is not only a server and client library / crate, but comes powered with a lot of useful features, tools and libraries / crates included!
+            <a href="https://rocket.rs/">Rocket.rs</a> is not only a server and client library / crate, but comes
+            powered with a lot of useful features, tools and libraries / crates included!
           </p>
         </div>
       </article>
@@ -44,15 +48,18 @@
         <p class="subtitle">CSS Framework</p>
         <div class="content">
           <p>
-            This website is designed with <a href="https://bulma.io/">Bulma</a>, <em>a free, open source CSS framework based on Flexbox</em>.
+            This website is designed with <a href="https://bulma.io/">Bulma</a>, <em>a free, open source CSS framework
+              based on Flexbox</em>.
           </p>
           <p>
             <a href="https://bulma.io/">Bulma</a> makes it extremely easy to design responsive (flex) user-interfaces.
             It is even possible to create websites without own stylesheets.
           </p>
           <p>
-            I still added some things myself and modified some of the component, but this websites design-core is <a href="https://bulma.io/">Bulma</a>.
-            If you are interested in my changes check out the style-sheets <a href="https://gitlab.com/sakul6499_de/sakul6499_de.gitlab.io/">on my repository</a>.
+            I still added some things myself and modified some of the component, but this websites design-core is <a
+              href="https://bulma.io/">Bulma</a>.
+            If you are interested in my changes check out the style-sheets <a
+              href="https://gitlab.com/sakul6499_de/sakul6499_de.gitlab.io/">on my repository</a>.
           </p>
         </div>
       </article>
@@ -66,10 +73,12 @@
         <div class="content">
           <p>
             <a href="https://diesel.rs/">Diesel.rs</a> is used for the <i>data-layer</i>.
-            <a href="https://diesel.rs/">Diesel.rs</a> is <b>not</b> a <i>database</i> on its own, but can be used to connect to different <i>databases</i> and make queries easier.
+            <a href="https://diesel.rs/">Diesel.rs</a> is <b>not</b> a <i>database</i> on its own, but can be used to
+            connect to different <i>databases</i> and make queries easier.
           </p>
           <p>
-            <a href="https://diesel.rs/">Diesel.rs</a> makes it incredibly easy to create a schema and use it without restrictions.
+            <a href="https://diesel.rs/">Diesel.rs</a> makes it incredibly easy to create a schema and use it without
+            restrictions.
             <a href="https://diesel.rs/">Diesel.rs</a> also integrates with <a href="https://rocket.rs/">Rocket.rs</a>
           </p>
         </div>
@@ -84,10 +93,12 @@
             <a href="https://tera.netlify.app/">Tera</a> is used as a template engine for the <i>frontend</i>.
           </p>
           <p>
-            Using templates makes it possible to reuse a lot of code and split the website into multiple parts / components, which then only need to be combined.
+            Using templates makes it possible to reuse a lot of code and split the website into multiple parts /
+            components, which then only need to be combined.
           </p>
           <p>
-            <a href="https://tera.netlify.app/">Tera</a> also includes quite powerful tools and a sort-of scripting language
+            <a href="https://tera.netlify.app/">Tera</a> also includes quite powerful tools and a sort-of scripting
+            language
           </p>
         </div>
       </article>
@@ -100,15 +111,16 @@
         <p class="subtitle">Icons</p>
         <div class="content">
           <p>
-            This website makes use of different icons.<br/>
+            This website makes use of different icons.<br />
             Most, if not all, are from <a href="https://fontawesome.com/">Font Awesome</a>.
           </p>
           <p>
-            <a href="https://fontawesome.com/">Font Awesome</a>, in its free license model, requires you to give proper credit to all used icons and state their changes.
+            <a href="https://fontawesome.com/">Font Awesome</a>, in its free license model, requires you to give proper
+            credit to all used icons and state their changes.
           </p>
           <p>
             I did introduce slight optimization on some icons, but the overall look of the icon did not change.
-            <br/>
+            <br />
             Furthermore, some icon colors where changed to better fit the color-schema of my website.
           </p>
           <p>
@@ -126,12 +138,15 @@
             This entire website is build with <a href="https://www.rust-lang.org/">Rust</a>.
           </p>
           <p>
-            Even the client-library is written in <a href="https://www.rust-lang.org/">Rust</a> and compiled to <a href="https://webassembly.org/">WASM</a>.
+            Even the client-library is written in <a href="https://www.rust-lang.org/">Rust</a> and compiled to <a
+              href="https://webassembly.org/">WASM</a>.
           </p>
           <p>
             There are soooooo many different crates I am using, and even more crates that other crates depend on.
             Currently, there are, per-project, over 200 crates in use.
-            If you want to know more check out the <a href="https://gitlab.com/sakul6499_de/sakul6499_de.gitlab.io/">repository</a> and compile the code yourself!
+            If you want to know more check out the <a
+              href="https://gitlab.com/sakul6499_de/sakul6499_de.gitlab.io/">repository</a> and compile the code
+            yourself!
           </p>
         </div>
       </article>
@@ -144,12 +159,12 @@
     </div>
     <div class="message-body">
       This page is extended by the <a href="/legal">legal</a> page.
-      <br/>
+      <br />
       Please also consult the <a href="/legal">legal</a> page for further information about this website.
-      <br/>
-      <br/>
+      <br />
+      <br />
       The <a href="/legal">legal</a> page can be found <a href="/legal">here</a>.
     </div>
-  </article>  
+  </article>
 </div>
 {% endblock content %}
