--- a/templates/taxonomy_list.html
+++ b/templates/taxonomy_list.html
@@ -2,11 +2,10 @@
 
 {% block content %}
 <h1 class="title">
-  {{ section.title }}
+  Taxonomy List
 </h1>
 <ul>
-  <!-- If you are using pagination, section.pages will be empty. You need to use the paginator object -->
-  {% for page in section.pages %}
+  {% for taxonomy in section.taxonomies %}
   <li><a href="{{ page.permalink | safe }}">{{ page.title }}</a></li>
   {% endfor %}
 </ul>
