Changed title page to include the proper name and fixed icons

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
             Hello, world!
           </h1>
           <h2 class="has-text-white subtitle">
-            I am @Sakul6499 | Lukas Weber.
+            I am @Sakul6499 | @SakulFlee | Lukas Weber.
           </h2>
           <p class="has-text-white is-family-code">
             Software Engineer Student
@@ -22,32 +22,15 @@
         <div class="is-vcentered">
           <ul>
             <li class="icon p-icon">
-              {% include "components/svg/gitea.html" %}
+              {% include "components/svg/github.html" %}
             </li>
             <li class="icon p-icon">
               {% include "components/svg/gitlab.html" %}
-            </li>
-            <li class="icon p-icon">
-              {% include "components/svg/github.html" %}
             </li>
           </ul>
           <ul>
             <li class="icon p-icon">
               {% include "components/svg/bitbucket.html" %}
-            </li>
-            <li class="icon p-icon">
-              {% include "components/svg/linkedin.html" %}
-            </li>
-            <li class="icon p-icon">
-              {% include "components/svg/keybase.html" %}
-            </li>
-          </ul>
-          <ul>
-            <li class="icon p-icon">
-              {% include "components/svg/telegram.html" %}
-            </li>
-            <li class="icon p-icon">
-              {% include "components/svg/twitter.html" %}
             </li>
             <li class="icon p-icon">
               {% include "components/svg/mail.html" %}
