--- a/templates/index.html
+++ b/templates/index.html
@@ -36,20 +36,22 @@
               {% include "components/svg/mail.html" %}
             </li>
           </ul>
-          <div class="buttons columns">
-            <a href="/blog" class="button mr-4 mt-6 is-large is-white is-outlined column">
+          <div class="buttons columns mt-6">
+            <a href="/blog" class="button is-large is-white is-outlined column is-4">
               <span class="icon is-large">
                 <i class="fas fa-book"></i>
               </span>
               <span>Blog</span>
             </a>
-            <a href="/projects" class="button ml-4 mt-6 is-large is-white is-outlined column">
+            <span class="column is-4"></span>
+            <a href="/projects" class="button is-large is-white is-outlined column is-4 is-pulled-right">
               <span class="icon is-large">
                 <i class="fas fa-code-branch"></i>
               </span>
               <span>Projects</span>
             </a>
           </div>
+
           {% include "components/scroll-down.html" %}
         </div>
       </div>
