--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -14,19 +14,10 @@
         Hello there! My name is Lukas
         Weber and I am {{ age }} years old. </p>
         <p>
-          Currently, I live in Germany, but I am studying <i>Software Engineering</i> in the Netherlands. I am
-          interested
-          in a lot
-          of topics (mainly IT related).
-          I am constantly learning new skills and about new topics I find interesting.
+          I am from Germany and study <i>Software Engineering</i> in the Netherlands. This is my place to share my
+          thoughts, ideas and findings about various topics.
         </p>
-        <br />
-        <p>I am currently also in need of an internship.</p>
-        <p>
-          Interested? Contact me via <a href="mailto:me@sakul6499.de">Email</a>,
-          <a href="https://t.me/sakul6499">Telegram</a> or
-          <a href="https://keybase.io/sakul6499">KeyBase</a>.
-        </p>
+        <p>My goal is to provide interesting and helpful resources for others.</p>
     </div>
     {% include "components/timeline.html" %}
   </article>
