Actually fixed buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
               </span>
               <span>Blog</span>
             </a>
-            <span class="column is-4"></span>
+            <span class="column"></span>
             <a href="/projects" class="button is-large is-white is-outlined column is-4 is-pulled-right">
               <span class="icon is-large">
                 <i class="fas fa-code-branch"></i>
