Fixed icons rendering over each other

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -28,6 +28,9 @@ $footer-spacing: 4%
                 width: 6vh
                 height: 6vh
 
+.icon + .icon
+    margin-left: 8pt
+
 @keyframes bounce
     0%, 10%, 100%
         top: 0vh
