Somewhat fixed timeline

--- a/templates/components/timeline.html
+++ b/templates/components/timeline.html
@@ -1,12 +1,47 @@
 <div id="timeline">
   <u class="is-half is-family-code has-text-underlined">Timeline</u>
+
+  <span class="columns">
+    <span class="column is-3">2005</span>
+    <span class="column is-9">
+      <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
+        data-tooltip="Here starts everything... First real experience with computers, mainly windows, etc.">
+        Start of everything
+      </div>
+      <div class="line dotted"></div>
+      <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
+        data-tooltip="Here starts everything... First real experience with computers, mainly windows, etc.">
+        Start of everything
+      </div>
+      <div class="line dotted"></div>
+      <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
+        data-tooltip="Here starts everything... First real experience with computers, mainly windows, etc.">
+        Start of everything
+      </div>
+      <div class="line dotted"></div>
+      <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
+        data-tooltip="Here starts everything... First real experience with computers, mainly windows, etc.">
+        Start of everything
+      </div>
+    </span>
+  </span>
+
+  <span class="columns">
+    <span class="column is-3">BLA</span>
+    <span class="column is-9">
+      <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
+        data-tooltip="Here starts everything... First real experience with computers, mainly windows, etc.">
+        BLA BLA BLA
+      </div>
+      <div class="line solid"></div>
+    </span>
+  </span>
+
   <div class="entry">
     <div class="date">2005</div>
     <div class="texts">
-      <div
-        class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
-        data-tooltip="Here starts everything... First real experience with computers, mainly windows, etc."
-      >
+      <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
+        data-tooltip="Here starts everything... First real experience with computers, mainly windows, etc.">
         Start of everything
       </div>
     </div>
@@ -15,17 +50,13 @@
   <div class="entry">
     <div class="date">2009</div>
     <div class="texts">
-      <div
-        class="is-warning tag is-large tooltip has-tooltip-warning is-tooltip-multiline has-text-black"
-        data-tooltip="Beginning of my programming knowledge"
-      >
+      <div class="is-warning tag is-large tooltip has-tooltip-warning is-tooltip-multiline has-text-black"
+        data-tooltip="Beginning of my programming knowledge">
         Started with Java and WEB
       </div>
       <div class="solid-line"></div>
-      <div
-        class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
-        data-tooltip="Beginning of my programming knowledge"
-      >
+      <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
+        data-tooltip="Beginning of my programming knowledge">
         First look into Linux
       </div>
     </div>
@@ -34,17 +65,13 @@
   <div class="entry">
     <div class="date">2012</div>
     <div class="texts">
-      <div
-        class="is-warning tag is-large tooltip has-tooltip-warning is-tooltip-multiline has-text-black"
-        data-tooltip="Major step into the 'native world'!"
-      >
+      <div class="is-warning tag is-large tooltip has-tooltip-warning is-tooltip-multiline has-text-black"
+        data-tooltip="Major step into the 'native world'!">
         Started with C/C+
       </div>
       <div class="solid-line"></div>
-      <div
-        class="is-link tag is-large tooltip has-tooltip-link is-tooltip-multiline has-text-white"
-        data-tooltip="I loved this language since the beginning!"
-      >
+      <div class="is-link tag is-large tooltip has-tooltip-link is-tooltip-multiline has-text-white"
+        data-tooltip="I loved this language since the beginning!">
         Started learning Japanese
       </div>
     </div>
@@ -53,10 +80,8 @@
   <div class="entry">
     <div class="date">2014</div>
     <div class="texts">
-      <div
-        class="is-link tag is-large tooltip has-tooltip-link is-tooltip-multiline has-text-white"
-        data-tooltip="Finished my LCCI business english certificate"
-      >
+      <div class="is-link tag is-large tooltip has-tooltip-link is-tooltip-multiline has-text-white"
+        data-tooltip="Finished my LCCI business english certificate">
         LCCI certificate
       </div>
     </div>
@@ -65,10 +90,8 @@
   <div class="entry">
     <div class="date">2015</div>
     <div class="texts">
-      <div
-        class="is-info tag is-large tooltip has-tooltip-info is-tooltip-multiline has-text-white"
-        data-tooltip="[2009-2015] German primary school education, completed with allowance for secondary school education."
-      >
+      <div class="is-info tag is-large tooltip has-tooltip-info is-tooltip-multiline has-text-white"
+        data-tooltip="[2009-2015] German primary school education, completed with allowance for secondary school education.">
         Primary education
       </div>
     </div>
@@ -77,24 +100,18 @@
   <div class="entry">
     <div class="date">2018</div>
     <div class="texts">
-      <div
-        class="is-link tag is-large tooltip has-tooltip-link is-tooltip-multiline has-text-white"
-        data-tooltip="Right before starting my study!"
-      >
+      <div class="is-link tag is-large tooltip has-tooltip-link is-tooltip-multiline has-text-white"
+        data-tooltip="Right before starting my study!">
         Dutch certificate
       </div>
       <div class="solid-line"></div>
-      <div
-        class="is-info tag is-large tooltip has-tooltip-info is-tooltip-multiline has-text-white"
-        data-tooltip="[2015-2018] German secondary school education, completed with vocational diploma."
-      >
+      <div class="is-info tag is-large tooltip has-tooltip-info is-tooltip-multiline has-text-white"
+        data-tooltip="[2015-2018] German secondary school education, completed with vocational diploma.">
         Secondary education
       </div>
       <div class="solid-line"></div>
-      <div
-        class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
-        data-tooltip="My team got voted the best first semester project!"
-      >
+      <div class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
+        data-tooltip="My team got voted the best first semester project!">
         Best 1st semester uni project
       </div>
     </div>
@@ -103,24 +120,18 @@
   <div class="entry">
     <div class="date">2019</div>
     <div class="texts">
-      <div
-        class="is-warning tag is-large tooltip has-tooltip-warning is-tooltip-multiline has-text-black"
-        data-tooltip="Starting point of learning rust"
-      >
+      <div class="is-warning tag is-large tooltip has-tooltip-warning is-tooltip-multiline has-text-black"
+        data-tooltip="Starting point of learning rust">
         Started with Rust
       </div>
       <div class="solid-line"></div>
-      <div
-        class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
-        data-tooltip="One of the best three-tier business application!"
-      >
+      <div class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
+        data-tooltip="One of the best three-tier business application!">
         Best 2nd semester uni project
       </div>
       <div class="solid-line"></div>
-      <div
-        class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
-        data-tooltip="Compared to other groups, very advanced traffic light simulations"
-      >
+      <div class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
+        data-tooltip="Compared to other groups, very advanced traffic light simulations">
         Best 3rd semester uni project
       </div>
     </div>
@@ -129,16 +140,13 @@
   <div class="entry">
     <div class="date">2020</div>
     <div class="texts">
-      <div
-        class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
+      <div class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
         data-tooltip="My team created the best android app!">
         Best 4th semester uni project
       </div>
       <div class="solid-line"></div>
-      <div
-        class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
-        data-tooltip="Hopefully a fantastic experience!"
-      >
+      <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
+        data-tooltip="Hopefully a fantastic experience!">
         Internship
       </div>
     </div>
@@ -147,10 +155,8 @@
   <div class="entry">
     <div class="date">2021</div>
     <div class="texts">
-      <div
-        class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
-        data-tooltip="Not yet sure what ..."
-      >
+      <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
+        data-tooltip="Not yet sure what ...">
         Minor
       </div>
     </div>
@@ -159,10 +165,8 @@
   <div class="entry">
     <div class="date">2022</div>
     <div class="texts">
-      <div
-        class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
-        data-tooltip="[2018-2022] Software engineering study, abroad in the Netherlands. To be completed with a bachelor of science degree."
-      >
+      <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
+        data-tooltip="[2018-2022] Software engineering study, abroad in the Netherlands. To be completed with a bachelor of science degree.">
         Bachelor of Applied Sciences
       </div>
     </div>
