--- a/sass/style.sass
+++ b/sass/style.sass
@@ -94,40 +94,41 @@ $footer-spacing: 4%
             color: magenta
             text-decoration: underline
 
+    //     width: 100%
+//     // .entry
+//     //     // width: 100%
+//     //     // display: inline-block
+//     //     .date
+//     //         // width: 25%
+//     //         // display: inline-block
+//     //     .texts
+//     //         // width: 75%
+//     //         // display: inline-block
+//     //         div
+//     //             @media screen and (max-width: $tablet)
+//     //                 font-size: 0.8rem
+//     //             @media screen and (min-width: $tablet)
+//     //                 font-size: 1.25rem
+//     //     .tag
+//     //         margin-top: 8px
+//     //         margin-bottom: 8px
 #timeline
-    width: 100%
     padding-top: 16px
-    .entry
-        width: 100%
-        display: inline-block
-        .date
-            width: 25%
-            display: inline-block
-        .texts
-            width: 75%
-            display: inline-block
-            div
-                @media screen and (max-width: $tablet)
-                    font-size: 0.8rem
-                @media screen and (min-width: $tablet)
-                    font-size: 1.25rem
-        .tag
-            margin-top: 8px
-            margin-bottom: 8px
-    .solid-line
+    .line
         height: 32px
         margin-left: 50%
+        margin-top: 16px
+        margin-bottom: 12px
+
+        & + .tag
+            margin-top: 8px
+            margin-bottom: 8px
+
+    .solid
         border-left: solid magenta 4px
-        & + .tag
-            margin-top: 8px
-            margin-bottom: 8px
-    .dotted-line
-        height: 32px
-        margin-left: 50%
+
+    .dotted
         border-left: dotted magenta 4px
-        & + .tag
-            margin-top: 8px
-            margin-bottom: 8px
 
 .no-link
     &
