--- a/templates/components/timeline.html
+++ b/templates/components/timeline.html
@@ -9,166 +9,146 @@
         Start of everything
       </div>
       <div class="line dotted"></div>
-      <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
-        data-tooltip="Here starts everything... First real experience with computers, mainly windows, etc.">
-        Start of everything
-      </div>
-      <div class="line dotted"></div>
-      <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
-        data-tooltip="Here starts everything... First real experience with computers, mainly windows, etc.">
-        Start of everything
-      </div>
-      <div class="line dotted"></div>
-      <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
-        data-tooltip="Here starts everything... First real experience with computers, mainly windows, etc.">
-        Start of everything
-      </div>
     </span>
   </span>
 
   <span class="columns">
-    <span class="column is-3">BLA</span>
+    <span class="column is-3">2009</span>
     <span class="column is-9">
-      <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
-        data-tooltip="Here starts everything... First real experience with computers, mainly windows, etc.">
-        BLA BLA BLA
-      </div>
-      <div class="line solid"></div>
-    </span>
-  </span>
-
-  <div class="entry">
-    <div class="date">2005</div>
-    <div class="texts">
-      <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
-        data-tooltip="Here starts everything... First real experience with computers, mainly windows, etc.">
-        Start of everything
-      </div>
-    </div>
-  </div>
-  <div class="dotted-line"></div>
-  <div class="entry">
-    <div class="date">2009</div>
-    <div class="texts">
       <div class="is-warning tag is-large tooltip has-tooltip-warning is-tooltip-multiline has-text-black"
         data-tooltip="Beginning of my programming knowledge">
         Started with Java and WEB
       </div>
-      <div class="solid-line"></div>
+      <div class="line solid"></div>
       <div class="is-dark tag is-large tooltip has-tooltip-dark is-tooltip-multiline has-text-white"
         data-tooltip="Beginning of my programming knowledge">
         First look into Linux
       </div>
-    </div>
-  </div>
-  <div class="dotted-line"></div>
-  <div class="entry">
-    <div class="date">2012</div>
-    <div class="texts">
+      <div class="line dotted"></div>
+    </span>
+  </span>
+
+  <span class="columns">
+    <span class="column is-3">2012</span>
+    <span class="column is-9">
       <div class="is-warning tag is-large tooltip has-tooltip-warning is-tooltip-multiline has-text-black"
         data-tooltip="Major step into the 'native world'!">
-        Started with C/C+
+        Started with C/C++
       </div>
-      <div class="solid-line"></div>
+      <div class="line solid"></div>
       <div class="is-link tag is-large tooltip has-tooltip-link is-tooltip-multiline has-text-white"
         data-tooltip="I loved this language since the beginning!">
         Started learning Japanese
       </div>
-    </div>
-  </div>
-  <div class="dotted-line"></div>
-  <div class="entry">
-    <div class="date">2014</div>
-    <div class="texts">
+
+      <div class="line dotted"></div>
+    </span>
+  </span>
+
+  <span class="columns">
+    <span class="column is-3">2014</span>
+    <span class="column is-9">
       <div class="is-link tag is-large tooltip has-tooltip-link is-tooltip-multiline has-text-white"
         data-tooltip="Finished my LCCI business english certificate">
         LCCI certificate
       </div>
-    </div>
-  </div>
-  <div class="dotted-line"></div>
-  <div class="entry">
-    <div class="date">2015</div>
-    <div class="texts">
+
+      <div class="line dotted"></div>
+    </span>
+  </span>
+
+  <span class="columns">
+    <span class="column is-3">2015</span>
+    <span class="column is-9">
       <div class="is-info tag is-large tooltip has-tooltip-info is-tooltip-multiline has-text-white"
         data-tooltip="[2009-2015] German primary school education, completed with allowance for secondary school education.">
         Primary education
       </div>
-    </div>
-  </div>
-  <div class="dotted-line"></div>
-  <div class="entry">
-    <div class="date">2018</div>
-    <div class="texts">
+
+      <div class="line dotted"></div>
+    </span>
+  </span>
+
+  <span class="columns">
+    <span class="column is-3">2018</span>
+    <span class="column is-9">
       <div class="is-link tag is-large tooltip has-tooltip-link is-tooltip-multiline has-text-white"
         data-tooltip="Right before starting my study!">
         Dutch certificate
       </div>
-      <div class="solid-line"></div>
+      <div class="line solid"></div>
       <div class="is-info tag is-large tooltip has-tooltip-info is-tooltip-multiline has-text-white"
         data-tooltip="[2015-2018] German secondary school education, completed with vocational diploma.">
         Secondary education
       </div>
-      <div class="solid-line"></div>
+      <div class="line solid"></div>
       <div class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
         data-tooltip="My team got voted the best first semester project!">
         Best 1st semester uni project
       </div>
-    </div>
-  </div>
-  <div class="dotted-line"></div>
-  <div class="entry">
-    <div class="date">2019</div>
-    <div class="texts">
+
+      <div class="line dotted"></div>
+    </span>
+  </span>
+
+  <span class="columns">
+    <span class="column is-3">2019</span>
+    <span class="column is-9">
       <div class="is-warning tag is-large tooltip has-tooltip-warning is-tooltip-multiline has-text-black"
         data-tooltip="Starting point of learning rust">
         Started with Rust
       </div>
-      <div class="solid-line"></div>
+      <div class="line solid"></div>
       <div class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
         data-tooltip="One of the best three-tier business application!">
         Best 2nd semester uni project
       </div>
-      <div class="solid-line"></div>
+      <div class="line solid"></div>
       <div class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
         data-tooltip="Compared to other groups, very advanced traffic light simulations">
         Best 3rd semester uni project
       </div>
-    </div>
-  </div>
-  <div class="dotted-line"></div>
-  <div class="entry">
-    <div class="date">2020</div>
-    <div class="texts">
+
+      <div class="line dotted"></div>
+    </span>
+  </span>
+
+  <span class="columns">
+    <span class="column is-3">2020</span>
+    <span class="column is-9">
       <div class="is-success tag is-large tooltip has-tooltip-success is-tooltip-multiline has-text-white"
         data-tooltip="My team created the best android app!">
         Best 4th semester uni project
       </div>
-      <div class="solid-line"></div>
+      <div class="line solid"></div>
       <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
         data-tooltip="Hopefully a fantastic experience!">
         Internship
       </div>
-    </div>
-  </div>
-  <div class="dotted-line"></div>
-  <div class="entry">
-    <div class="date">2021</div>
-    <div class="texts">
+
+      <div class="line dotted"></div>
+    </span>
+  </span>
+
+  <span class="columns">
+    <span class="column is-3">2021</span>
+    <span class="column is-9">
       <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
         data-tooltip="Not yet sure what ...">
         Minor
       </div>
-    </div>
-  </div>
-  <div class="dotted-line"></div>
-  <div class="entry">
-    <div class="date">2022</div>
-    <div class="texts">
+
+      <div class="line dotted"></div>
+    </span>
+  </span>
+
+  <span class="columns">
+    <span class="column is-3">2022</span>
+    <span class="column is-9">
       <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
         data-tooltip="[2018-2022] Software engineering study, abroad in the Netherlands. To be completed with a bachelor of science degree.">
         Bachelor of Applied Sciences
       </div>
-    </div>
-  </div>
+    </span>
+  </span>
 </div>
