--- a/sass/style.sass
+++ b/sass/style.sass
@@ -79,7 +79,7 @@ $footer-spacing: 4%
     margin-left: $page-margin
     margin-right: $page-margin
 
-#AboutMe
+#about_me
     padding: 16px
     @media screen and (min-width: $tablet)
         margin-top: 16px
@@ -90,9 +90,6 @@ $footer-spacing: 4%
                 border-bottom: solid black
             @media screen and (min-width: $tablet)
                 border-right: solid black
-        a
-            color: magenta
-            text-decoration: underline
 
 #timeline
     padding-top: 16px
