Text markup changes

--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -12,9 +12,12 @@
       {% set age = current_year - birth_year %}
       {% if current_month < 4%} {% set age=age - 1 %} {% elif current_day < 6 %} {% set age=age - 1 %} {% endif %} <p>
         Hello there! My name is Lukas
-        Weber and I am {{ age }} years old. </p>
+        Weber (@SakulFlee | @Sakul6499) and I am {{ age }} years old. </p>
         <p>
-          I am from Germany and study <i>Software Engineering</i> in the Netherlands. This is my place to share my
+          I am from Germany and study <i>Software Engineering</i> in the Netherlands.
+        </p>
+        <p>
+          This is my place to share my
           thoughts, ideas and findings about various topics.
         </p>
         <p>My goal is to provide interesting and helpful resources for others.</p>
