Updated timeline somewhat

--- a/templates/components/timeline.html
+++ b/templates/components/timeline.html
@@ -136,7 +136,7 @@
       <div class="line solid"></div>
 
       <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
-        data-tooltip="Hopefully a fantastic experience!">
+        data-tooltip="An amazing experience at Vodafone Germany">
         Internship
       </div>
 
@@ -148,8 +148,8 @@
     <span class="column is-3">2021</span>
     <span class="column is-9">
       <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
-        data-tooltip="Not yet sure what ...">
-        Minor
+        data-tooltip="Analyzing pigs vocality with sound-based AI-Analysis">
+        AI Research Project
       </div>
 
       <div class="line dotted"></div>
@@ -157,10 +157,17 @@
   </span>
 
   <span class="columns">
-    <span class="column is-3">2022</span>
+    <span class="column is-3">Future</span>
     <span class="column is-9">
       <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
-        data-tooltip="[2018-2022] Software engineering study, abroad in the Netherlands. To be completed with a bachelor of science degree.">
+        data-tooltip="Not yet sure what ...">
+        Minor
+      </div>
+
+      <div class="line solid"></div>
+
+      <div class="is-white tag is-large tooltip has-tooltip-white is-tooltip-multiline has-text-black"
+        data-tooltip="Software engineering study, abroad in the Netherlands. To be completed with a bachelor of science degree.">
         Bachelor of Applied Sciences
       </div>
     </span>
