--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -1,7 +1,10 @@
-<hr/>
+<hr />
 <section id="footer">
     <p class="has-text-centered">
         Made with <span class="icon has-text-danger"><i class="fas fa-heart fas fa-1x"></i></span> by @Sakul6499
+    </p>
+    <p class="has-text-centered">
+        © {{ now() | date(format = "%Y") }} @Sakul6499 | @SakulFlee | Lukas Weber, Some Rights Reserved.
     </p>
     <div class="buttons columns mt-4 is-centered">
         <a href="/contact" class="button is-normal mr-4 ml-4">
