--- a/templates/components/skills.html
+++ b/templates/components/skills.html
@@ -15,14 +15,14 @@
     <br />
 
     <div class="tag is-half is-family-code tooltip is-success has-tooltip-success is-small is-tooltip-multiline"
-      data-tooltip="I am studying in the netherlands! Basic dutch is a must, although I mainly only understand ...">
+      data-tooltip="I am studying in the Netherlands! Basic dutch is a must, although I mainly only understand ...">
       Dutch</div>
 
     <div class="tag is-half is-family-code tooltip is-success has-tooltip-success is-small is-tooltip-multiline"
-      data-tooltip="Not fluent but an very interesting and different language!">Japanese</div>
+      data-tooltip="あなたは日本語を話せますか？ (Basic level)">Japanese</div>
 
     <div class="tag is-half is-family-code tooltip is-success has-tooltip-success is-small is-tooltip-multiline"
-      data-tooltip="Only very basic sentences and definetely not fluent!">Spanish</div>
+      data-tooltip="¿Hablas español? (Basic level, Not at all fluent though!)">Spanish</div>
   </section>
 
   <h1 class="is-size-5 has-text-black">Languages I <s>speak</s> code:</h1>
