Removed google tag nonsense

--- a/templates/components/head.html
+++ b/templates/components/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
-<meta name="description" content="Blog-Post view page">
-<meta name="author" content="@Sakul6499 | Lukas Weber">
+<meta name="description" content="My personal blog and archive for projects and interest I enjoy.">
+<meta name="author" content="@SakulFlee | @Sakul6499 | Lukas Weber">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="/style.css">
@@ -8,15 +8,6 @@
 
 <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 <script defer src="/bulma-menu.js"></script>
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160626331-1"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-160626331-1');
-</script>
 
 <link rel="icon" href="/favicon.ico">
 
